# titanic-prediction

./: .dockerignore  .gitignore  Dockerfile.api  Dockerfile.ui  README.md  docker-compose.yml
api/: main.py  pyproject.toml
api/datasets/: train.csv
api/lib/: get_data.py  predict.py  train_model.py
api/models/: titanic_model.pkl
ui/: package.json
ui/public/: manifest.json
ui/src/: App.js
ui/src/components/: Prediction.js  ShowData.js
